--- a/css/styles.css
+++ b/css/styles.css
@@ -846,9 +846,28 @@ progress {
   --bs-gutter-x: 0;
 }
 
+video {
+  width: 100%;
+  max-height: 400px;
+}
+
+
+
 .g-0,
 .gy-0 {
   --bs-gutter-y: 0;
+  padding: 20px;
+  width: 90%;
+  margin: auto;
+}
+
+.text-center-2 {
+  text-align: center;
+  font-size: 42px;
+  line-height: 46px;
+  margin-bottom: 44px;
+  font-weight: bold;
+  margin-top: 90px;
 }
 
 .g-1,
